--- a/2. L_10_17.html
+++ b/2. L_10_17.html
@@ -12,6 +12,6 @@
         <!--Assignment2-->
         <div id="elzero">Elzero</div>
 
-        <script src="L_10_17.js"></script>
+        <script src="2. L_10_17.js"></script>
     </body>
 </html>
